--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 reqwest = {version = "0.12.15", default-features = false, features = ["blocking", "gzip", "rustls-tls"]}
+serde_json = "1.0"
