--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 reqwest = {version = "0.12.15", default-features = false, features = ["blocking", "gzip", "rustls-tls"]}
 serde_json = "1.0"
+rand = "0.8.5"
